--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    
     <title>OSpaceX - Home</title>
 </head>
-<body>
+<body class="bg-danger">
     <div class="container-fluid container00 container01">
         <div class="container">
             <header class="header">
@@ -50,6 +50,38 @@
         </div>
         </div>
     </div>
+
+    <div class="container-fluid container00 container02">
+        <div class="container">
+            <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
+            <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
+            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+        </div>
+    </div>
+
+    <div class="container-fluid container00 container03">
+        <div class="container">
+            <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
+            <p class="h1 shortTitle">DRAGON VOLTOU PARA A TERRA</p>
+            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+        </div>
+    </div>
+
+    <div class="container-fluid container00 container04">
+        <div class="container">
+            <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS DA NASA NA LUA</p>
+            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+        </div>
+    </div>
+
+    <footer class="container-fluid footer">
+        <span class="me-4 copyMariana">Mariana Santos Pinto &copy;2022</span>
+        <a href="" class="me-4">Instagram</a>
+        <a href="" class="me-4">Youtube</a>
+        <a href="">Twitter</a>
+        
+        
+    </footer>
 
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
