--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
    
     <title>OSpaceX - Home</title>
 </head>
-<body class="bg-danger">
+
     <div class="container-fluid container00 container01">
         <div class="container">
             <header class="header">
-                <nav class="container navbar-expand-lg navbar-dark bg-transparent pt-4">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
                     <div class="container-fluid">
-                        <a href="/index.html">
+                        <a class="navbar-brand"  href="/index.html">
                             <img src="./images/home/SpaceX-logo-cropped.webp" alt="logoSpacex" class="logoPc img-fluid">
                         </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"aria-label="Toggle navigation">
+                        <button button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarNav">
                             <span class="navbar-toggler-icon"></span>
                             </button>
                             <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,37 +40,37 @@
                 </nav>
             </header>
         </div>
-        <div class="container titlePadding">
-            <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
+        <div class="container titlePadding" data-aos="fade-up" data-aos-duration="1500">
+            <p class="h5" id="lauchComing">LANÇAMENTO A CAMINHO</p>
             <p class="h1">MISSÃO EQUIPE-3</p>
-            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+            <button type="button" class=" btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         <div class="container text-center">
-            <img src="./images/home/arrowDown.gif" alt="arrowDown">
+            <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown" >
 
         </div>
         </div>
     </div>
 
     <div class="container-fluid container00 container02">
-        <div class="container">
-            <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
+        <div class="container titlePadding">
+            <p class="h5" id="lauchComing">MISSÃO CONCLUÍDA</p>
             <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
-            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+            <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
     </div>
 
     <div class="container-fluid container00 container03">
-        <div class="container">
-            <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
+        <div class="container titlePadding">
+            <p class="h5" id="lauchComing">MISSÃO CONCLUÍDA</p>
             <p class="h1 shortTitle">DRAGON VOLTOU PARA A TERRA</p>
-            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+            <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
     </div>
 
     <div class="container-fluid container00 container04">
-        <div class="container">
+        <div class="container titlePadding">
             <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS DA NASA NA LUA</p>
-            <button type="button" class="btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+            <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
     </div>
 
