--- a/index.html
+++ b/index.html
@@ -24,29 +24,31 @@
                         <a class="navbar-brand"  href="/index.html">
                             <img src="./images/home/SpaceX-logo-cropped.webp" alt="logoSpacex" class="logoPc img-fluid">
                         </a>
-                        <button button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarNav">
+                        <button button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                             </button>
                             <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/falcon9.html">FALCON 9</a>
+                            <a class="nav-link active" aria-current="page" href="/falcon.html" id="navItem">FALCON 9</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link active" href="/humamFlight.html">HUMAN SPACE FLIGHT</a>
+                            <a class="nav-link active" href="/humanSpace.html" id="navItem">HUMAN SPACE FLIGHT</a>
                             </li></ul>
                             </div>
-                    </div>
-                </nav>
-            </header>
-        </div>
-        <div class="container titlePadding" data-aos="fade-up" data-aos-duration="1500">
-            <p class="h5" id="lauchComing">LANÇAMENTO A CAMINHO</p>
-            <p class="h1">MISSÃO EQUIPE-3</p>
-            <button type="button" class=" btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
-        <div class="container text-center">
-            <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown" >
-
+                        </nav>
+                    
+                    </header>
+                </div>
+                <div class="container titlePadding">
+                    <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
+                    <p class="h1">MISSÃO EQUIPE-3</p>
+                    <button type="button" class=" btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
+                    <div class="container text-center">
+                        <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown" >
+            </div>
+                
         </div>
         </div>
     </div>
