--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="container titlePadding">
                     <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
-                    <p class="h1">MISSÃO EQUIPE-3</p>
+                    <p class="h1 mediumTitle">MISSÃO EQUIPE-3</p>
                     <button type="button" class=" btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
                     <div class="container text-center">
                         <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown" >
@@ -55,7 +55,7 @@
 
     <div class="container-fluid container00 container02">
         <div class="container titlePadding">
-            <p class="h5" id="lauchComing">MISSÃO CONCLUÍDA</p>
+            <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
             <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
             <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
@@ -63,7 +63,7 @@
 
     <div class="container-fluid container00 container03">
         <div class="container titlePadding">
-            <p class="h5" id="lauchComing">MISSÃO CONCLUÍDA</p>
+            <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
             <p class="h1 shortTitle">DRAGON VOLTOU PARA A TERRA</p>
             <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
         </div>
