--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +15,8 @@
    
     <title>OSpaceX - Home</title>
 </head>
+
+<body>
 
     <div class="container-fluid container00 container01">
         <div class="container">
