--- a/index.html
+++ b/index.html
@@ -16,56 +16,25 @@
     <!-- Link do css -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Space-X Home</title>
+    <title>Onebit-X Home</title>
 
 </head>
 <body>
 
     <!-- Primeira parte do projeto -->
+    
     <div class="container-fluid container00 container01">
         <div class="container">
             <header class="header">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
-                    <div class="container-fluid">
-                        <a href="/index.html">
-                            <img src="./images/home/logo-obc-2021-darkbg.png" alt="logoOBX" class="logoPc img-fluid">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
-                            <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/falcon9.html">FALCON 9</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link active" href="/humamFlight.html">HUMAN SPACE FLIGHT</a>
-                            </li></ul>
-                            </div>
-                    </div>
-                </nav>
+              <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
+                <div class="container-fluid">
+                    <a href="/index.html">
+                        <img src="./images/home/logo-obc-2021-darkbg.png" alt="logoOBX" class="logoPc img-fluid">
+                    </a>
+                </div>
+              </nav>  
             </header>
         </div>
-        <div class="container titlePadding">
-            <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
-
-            <p class="h1">MISSÃO EQUIPE-3</p>
-
-            <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
-
-            <div class="container text-center">
-                <img src="./images/home/arrowDown.gif" alt="arrowDown">
-            </div>
-        </div>
-    </div>
-
-    <!-- Segunda parte do projeto -->
-    <div class="container-fluid container00 container02">
-        <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
-
-            <p class="h1">MISSÃO EQUIPE-2 VOLTOU PARA A TERRA</p>
-
-            <button type="button" class="btn btn-outline-light mt-5" id="button">SAIBA MAIS</button>
     </div>
 
     <!-- Bootstrap script -->
