--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="./images/home/favicon.png">
 
     <!-- Link do css -->
+    <link rel="stylesheet" href="./css/style.css">
   
     <title>Onebit-X Home</title>
 
 </head>
 
-<body class="bg-danger">
+<body>
 
     <!-- Primeira parte -->
 
@@ -60,7 +61,7 @@
             <button type="button" class="btn btn-outline-light mt-5">SAIBA MAIS</button>
 
             <div class="container text-center">
-                <img src="./images/home/arrowDown.gif" alt="arrowDown">
+                <img src="./images/home/arrowDown.gif" alt="arrowDown" class="arrowDown">
             </div>
         </div>
     </div>
@@ -97,6 +98,13 @@
                 <button type="button" class="btn btn-outline-light mt-5">SAIBA MAIS</button>
         </div>
     </div>
+
+    <footer class="container-fluid footer">
+        <span class="me-4 copyOBC">Mariana Santos Pinto &copy;2022</span>
+        <a href="https://www.instagram.com/marianapint0/" target="blank" class="me-4">Instagram</a>
+        <a href="https://www.youtube.com/" target="blank" class="m4-4">Youtube</a>
+        <a href="https://twitter.com/marianaspint0" target="blank">Twitter</a>
+    </footer>
 
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
