home page finished

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Segunda parte -->
     
     <div class="container-fluid container00 container02">
-        <div class="container">
+        <div class="container titlePadding">
             <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
 
             <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
@@ -81,7 +81,7 @@
     <!-- Terceira parte -->
 
     <div class="container-fluid container00 container03">
-        <div class="container">
+        <div class="container titlePadding">
             <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
 
             <p class="h1 shortTitle">DRAGON RETORNOU PARA A TERRA</p>
@@ -93,7 +93,7 @@
     <!-- Quarta parte -->
 
     <div class="container-fluid container00 container04">
-        <div class="container">
+        <div class="container titlePadding">
             <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS DA NASA NA LUA</p>
                 <button type="button" class="btn btn-outline-light mt-5">SAIBA MAIS</button>
         </div>
@@ -102,7 +102,7 @@
     <footer class="container-fluid footer">
         <span class="me-4 copyOBC">Mariana Santos Pinto &copy;2022</span>
         <a href="https://www.instagram.com/marianapint0/" target="blank" class="me-4">Instagram</a>
-        <a href="https://www.youtube.com/" target="blank" class="m4-4">Youtube</a>
+        <a href="https://www.youtube.com/" target="blank" class="me-4">Youtube</a>
         <a href="https://twitter.com/marianaspint0" target="blank">Twitter</a>
     </footer>
 
