--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="/falcon9.html">FALCON 9</a>
+                                    <a class="nav-link active" aria-current="page" href="/falcon9.html" id="navItem">FALCON 9</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="/humamFlight.html">HUMAN SPACE FLIGHT</a>
+                                    <a class="nav-link active" href="/humamFlight.html" id="navItem">HUMAN SPACE FLIGHT</a>
                                 </li>
                             </ul>
                         </div>
@@ -56,7 +56,7 @@
         <div class="container titlePadding">
             <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
 
-            <p class="h1">MISSÃO EQUIPE-3</p>
+            <p class="h1 mediumTitle">MISSÃO EQUIPE-3</p>
 
             <button type="button" class="btn btn-outline-light mt-5">SAIBA MAIS</button>
 
