second carousel added

--- a/falcon.html
+++ b/falcon.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <!-- Carrossel -->
+    <!-- Primeiro carrossel -->
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -275,6 +275,76 @@
             </table>
         </div>
       </div>
+
+      <!-- Segundo carrossel -->
+      <div id="carouselExampleCaptions" class="carousel slide carrosselSlide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1000000">
+                <img src="./images/falcon/09.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <p class="carousselText">O Falcon 9 lança o Dragon para a Estação Espacial Internacional do Complexo
+                        de
+                        Lançamento 39A</p>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000000">
+                <img src="./images/falcon/10.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-md-block">
+                   <p class="carousselText">Primeiro e segundo estágio após a separação de voo</p>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000000">
+                <img src="./images/falcon/11.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <p class="carousselText">Falcon 9 decola com sua carga útil Iridium-5</p>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000000">
+                <img src="./images/falcon/12.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <p class="carousselText">Falcon 9 pousando no droneship para ler as instruções</p>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000000">
+                <img src="./images/falcon/13.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-md-block">
+                      <p class="carousselText">Clone dos motores Merlin do Falcon 9 durante a decolagem</p>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000000">
+                <img src="./images/falcon/14.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-md-block">
+                    <p class="carousselText">O falcon 9 deixa um rastro de luz ao decolar da Base Aérea de Vandenberg
+                    </p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
 
    
 
