--- a/falcon.html
+++ b/falcon.html
@@ -347,7 +347,7 @@
 
     <div class="container-fluid text-center downloadDesc">
         <p>Para mais informações sobre os serviços entre em
-            contato com <a href="https://www.instagram.com/marianapint0/" target="blank">marianapinto.pesoal@gmail.com</a></p>
+            contato com <a href="https://www.instagram.com/marianapint0/" target="blank" class="emailObc">marianapinto.pessoal@gmail.com</a></p>
     
                 <button type="button" class="btn btn-outline-light p-3">GUIA DO USUÁRIO</button>
                 <button type="button" class="btn btn-outline-light p-3">CAPACIDADES E SERVIÇOS</button>
