--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Lib text css -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Favicon -->
     <link rel="stylesheet" href="./images/home/favicon.png">
@@ -53,7 +54,7 @@
             </header>
         </div>
     
-        <div class="container titlePadding">
+        <div class="container titlePadding" data-aos="fade-up" data-aos-duration="1500">
             <p class="h5" id="launchComing">LANÇAMENTO A CAMINHO</p>
 
             <p class="h1 mediumTitle">MISSÃO EQUIPE-3</p>
@@ -69,7 +70,7 @@
     <!-- Segunda parte -->
     
     <div class="container-fluid container00 container02">
-        <div class="container titlePadding">
+        <div class="container titlePadding" data-aos="fade-right" data-aos-duration="1500">
             <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
 
             <p class="h1 shortTitle">MISSÃO EQUIPE-2 RETORNOU PARA A TERRA</p>
@@ -81,7 +82,7 @@
     <!-- Terceira parte -->
 
     <div class="container-fluid container00 container03">
-        <div class="container titlePadding">
+        <div class="container titlePadding" data-aos="fade-down" data-aos-duration="1500">
             <p class="h5" id="launchComing">MISSÃO CONCLUÍDA</p>
 
             <p class="h1 shortTitle">DRAGON RETORNOU PARA A TERRA</p>
@@ -93,7 +94,7 @@
     <!-- Quarta parte -->
 
     <div class="container-fluid container00 container04">
-        <div class="container titlePadding">
+        <div class="container titlePadding" data-aos="fade-down-right" data-aos-duration="1500">
             <p class="h1 mediumTitle">STARSHIP POUSA ASTRONAUTAS DA NASA NA LUA</p>
                 <button type="button" class="btn btn-outline-light mt-5">SAIBA MAIS</button>
         </div>
@@ -112,6 +113,10 @@
         crossorigin="anonymous"></script>
 
     <!-- Lib text Script -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 
 </html>
