completed falcon page animation

--- a/falcon.html
+++ b/falcon.html
@@ -52,7 +52,7 @@
                 </nav>
             </header>
         </div>
-    <div class="container text-center titleContent">
+    <div class="container text-center titleContent" data-aos="fade-up" data-aos-duration="1500">
          <p class="h1 titleFalcon9">FALCON 9</p>
 
          <p class="h5 subTitleFalcon">PRIMEIRA CLASSE DE FOGUETES DE 
@@ -65,19 +65,19 @@
     <div class="container-fluid numbers">
         <div class="row text-center">
             <div class="col-sm col1">
-                <p class="h1 titleNumb">126</p>
+                <p class="h1 titleNumb" data-aos="flip-up" data-aos-duration="1200">126</p>
 
-                <p class="subTitleNumb">LANÇAMENTOS TOTAIS</p>
+                <p class="subTitleNumb" data-aos="flip-up" data-aos-duration="1100">LANÇAMENTOS TOTAIS</p>
             </div>
             <div class="col">
-                <p class="h1 titleNumb">86</p>
+                <p class="h1 titleNumb" data-aos="flip-left" data-aos-duration="1150">86</p>
 
-                <p class="subTitleNumb">DESEMBARQUES TOTAIS</p>
+                <p class="subTitleNumb" data-aos="flip-left" data-aos-duration="1250">DESEMBARQUES TOTAIS</p>
             </div>
             <div class="col-sm col3">
-                <p class="h1 titleNumb">68</p>
+                <p class="h1 titleNumb" data-aos="flip-right" data-aos-duration="1350">68</p>
 
-                <p class="subTitleNumb">FOGUETES RECUPERADOS</p>
+                <p class="subTitleNumb" data-aos="flip-right" data-aos-duration="1300">FOGUETES RECUPERADOS</p>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
 
     <div class="container-fluid container00 container06">
         <div class="container containerFalcon9Desc">
-            <p class="falcon9Desc">
+            <p class="falcon9Desc" data-aos="fade-right" data-aos-duration="1500">
                 O Falcon 9 é um foguete reutilizável de dois estágios
                 projetado e fabricado pela SpaceX para o trasnporte confiável
                 e seguro de pessoas e cargas úteis para a órbita da Terra e além.
@@ -139,7 +139,7 @@
             </div>
             </div>    
           <div class="carousel-item container00 carrossel02" data-bs-interval="10000000">
-            <div class="container" id="overViewPosition">
+            <div class="container" id="overViewPosition" data-aos="fade-up" data-aos-duration="1500">
                 <p class="subTitleOverView">FALCON 9</p>
 
         <p class="h3 titleOverView">PRIMEIRO ESTÁGIO</p>
@@ -247,7 +247,7 @@
       </div>
 
       <div class="container-fluid container00 container07">
-        <div class="container" id="overViewPosition">
+        <div class="container" id="overViewPosition" data-aos="fade-down" data-aos-duration="1500">
             <p class="subTitleOverView">FALCON 9</p>
 
             <p class="h3 titleOverView">MERLIN</p>
@@ -346,11 +346,11 @@
     </div>
 
     <div class="container-fluid text-center downloadDesc">
-        <p>Para mais informações sobre os serviços entre em
+        <p data-aos="fade-right" data-aos-dutation="1200">Para mais informações sobre os serviços entre em
             contato com <a href="https://www.instagram.com/marianapint0/" target="blank" class="emailObc">marianapinto.pessoal@gmail.com</a></p>
     
-                <button type="button" class="btn btn-outline-light p-3">GUIA DO USUÁRIO</button>
-                <button type="button" class="btn btn-outline-light p-3">CAPACIDADES E SERVIÇOS</button>
+                <button type="button" class="btn btn-outline-light p-3" data-aos="flip-left" data-aos-duration="1000">GUIA DO USUÁRIO</button>
+                <button type="button" class="btn btn-outline-light p-3" data-aos="flip-up" data-aos-duration="1300">CAPACIDADES E SERVIÇOS</button>
             </div>
    
 
