--- a/humanSpace.html
+++ b/humanSpace.html
@@ -112,11 +112,11 @@
     </div>
 
     <div class="container-fluid text-center downloadDesc">
-        <p>Para mais informações sobre os serviços entre em
+        <p data-aos="fade-right" data-aos-dutation="1200">Para mais informações sobre os serviços entre em
             contato com <a href="https://www.instagram.com/marianapint0/" target="blank" class="emailObc">marianapinto.pessoal@gmail.com</a></p>
     
-                <button type="button" class="btn btn-outline-light p-3">GUIA DO USUÁRIO</button>
-                <button type="button" class="btn btn-outline-light p-3">CAPACIDADES E SERVIÇOS</button>
+                <button type="button" class="btn btn-outline-light p-3" data-aos="flip-left" data-aos-duration="1000">GUIA DO USUÁRIO</button>
+                <button type="button" class="btn btn-outline-light p-3" data-aos="flip-up" data-aos-duration="1300">CAPACIDADES E SERVIÇOS</button>
             </div>
 
     <footer class="container-fluid footer">
