--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
             <header class="header">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
                     <div class="container-fluid">
-                        <a href="/index.html">
-                            <img src="./images/home/logo-obc-2021-darkbg.png" alt="logoOBX" class="logoPc img-fluid">
-                        </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -42,6 +39,10 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="index.html" id="navItem">HOME</a>
+                                </li>
+
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="/falcon.html" id="navItem">FALCON 9</a>
                                 </li>
