--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Link do css -->
     <link rel="stylesheet" href="./css/style.css">
   
-    <title>Onebit-X Home</title>
+    <title>Space X Home</title>
 
 </head>
 
