--- a/humanSpace.html
+++ b/humanSpace.html
@@ -18,7 +18,7 @@
     <!-- Link do css -->
     <link rel="stylesheet" href="./css/style.css">
   
-    <title>Onebit-X Human</title>
+    <title>Space X Human</title>
 
 </head>
 
